--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,12 @@ services:
     restart: always
     env_file: .env
     ports:
-      - 5432:5432
+      - "5432:5432"
 
   adminer:
     image: adminer
     restart: always
+    depends_on: 
+      - db
     ports:
-      - 15432:8080
+      - "15432:8080"
