--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 db = { path = "../db" }
+domain = { path = "../domain" }
 actix-web = "^4"
 actix-cors = "^0.6"
 dotenvy = "^0.15"
