--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,11 +8,14 @@ edition = "2021"
 [dependencies]
 db = { path = "../db" }
 domain = { path = "../domain" }
-actix-web = "^4"
-actix-cors = "^0.6"
-dotenvy = "^0.15"
-derive_more = "^0.99"
 entity = { path = "../entity" }
 migration = { path = "../migration" }
+actix-web = "^4"
+actix-cors = "^0.6"
+bytes = "1.3.0"
+dotenvy = "^0.15"
+derive_more = "^0.99"
+futures-util = "^0.3"
 sea-orm = "^0.10"
 tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
+uuid = { version = "^1.2", features = ["v4"] }
