--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,5 +17,6 @@ dotenvy = "^0.15"
 derive_more = "^0.99"
 futures-util = "^0.3"
 sea-orm = "^0.10"
+serde = { version = "^1", features = ["derive"] }
 tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
 uuid = { version = "^1.2", features = ["v4"] }
