--- a/.env_aws
+++ b/.env_aws
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://recred:HkVdigcry0T4CGf00Xt1g3g1ZlZkORgHxRrxQBt7M8y0yQ54EQ@recred.cf7mfnw7jhnc.eu-west-3.rds.amazonaws.com:5432/recred
+DATABASE_URL=postgres://recred:xxxxxxxxxxxxxxxxxxx@recred.cf7mfnw7jhnc.eu-west-3.rds.amazonaws.com:5432/recred
